--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -1,4 +1,7 @@
-﻿@model UserAccount
+﻿@{
+    ViewData["Title"] = "Register"; 
+}
+@model UserAccount
 
 <main>
     <!-- <form asp-action="RegisterAction">
@@ -6,108 +9,108 @@
         <input asp-for="Password" name="Password" id="Password" required>
         <button class="btn btn-success" type="submit" placeholder="Register">
     </form> -->
+    <button id="testAPI"> test API </button>
     <h2 class="text-center mb-4">Register</h2>
-    <form style="max-width: 900px" class="mx-auto" autocomplete="off"> 
+    <form id="form_register" style="max-width: 900px" class="mx-auto" autocomplete="off" asp-controller="Account"
+        method="post" asp-action="RegisterAction">
         <div class="row">
             <div class="col-md-6">
                 <div class="form-outline mb-4">
-                    <input type="text" id="form1" class="form-control"  minlength="3"  required/>
-                    <label class="form-label" for="form1">firstname</label>
-                </div>    
+                    <input type="text" name="Username" class="form-control" />
+                    <label class="form-label">Username</label>
+                </div>
             </div>
-            <div class="col-md-6">            
+            <div class="col-md-6">
                 <div class="form-outline mb-3">
-                    <input type="text" id="form1" class="form-control" minlength="3" required/>
-                    <label class="form-label" for="form1">lastname</label>
+                    <input type="email" name="Email" class="form-control" required />
+                    <label class="form-label">Email Address</label>
                 </div>
             </div>
         </div>
-        
-        <div class="row">
-            <div class="col-12">
-                <div class="form-outline mb-3">
-                    <input type="email" id="form1" class="form-control" required/>
-                    <label class="form-label" for="form1">Email Address</label>
-                </div>    
-            </div>
-        </div>    
 
         <div class="row">
-            <div class="col-12">
+            <div class="col-md-6">
                 <div class="form-outline mb-3">
-                    <input type="text" id="form1" class="form-control" required/>
-                    <label class="form-label" for="form1">Date of birth</label>
-                </div>     
+                    <input type="text" name="Occupation" class="form-control" required />
+                    <label class="form-label"> Occupation </label>
+                </div>
             </div>
-        </div>   
-
-
-        <br/>
-
-        <div class="row">
-            <div class="col-lg-3 col-sm-6">
+            <div class="col-md-6">
                 <div class="form-outline mb-3">
-                    <input type="text" id="province" class="form-control" required/>
-                    <label class="form-label" for="province">Provice </label>
-                </div>    
+                    <input type="number" name="Income" class="form-control" minlength="3" required />
+                    <label class="form-label">Income</label>
+                </div>
             </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="form-outline mb-3">
-                    <input type="text" id="district" class="form-control" required/>
-                    <label class="form-label" for="district">District</label>
-                </div>    
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="form-outline mb-3">
-                    <input type="text" id="amphoe" class="form-control" required/>
-                    <label class="form-label" for="amphoe">Amphoe</label>
-                </div>    
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="form-outline mb-3">
-                    <input type="text" id="zipcode" class="form-control" required/>
-                    <label class="form-label" for="zipcode"> Zipcode </label>
-                </div>    
-            </div>
-        </div>    
+        </div>
 
         <div class="row">
             <div class="col-12">
                 <div class="form-outline mb-3">
-                    <textarea class="form-control" id="textAreaExample" rows="4"></textarea>
-                    <label class="form-label" for="form1">Address</label>
-                </div>    
+                    <input type="text" name="DateOfBirth" class="form-control" required />
+                    <label class="form-label">Date of birth</label>
+                </div>
             </div>
-        </div>              
+        </div>
 
-        <br/>
+        <br />
+
+        <div class="row">
+            <div class="col-md-4">
+                <div class="form-outline mb-3">
+                    <input type="text" name="Facebook" class="form-control" required />
+                    <label class="form-label" for="province"> Facebook </label>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-outline mb-3">
+                    <input type="text" name="Ig" class="form-control" required />
+                    <label class="form-label" for="district"> Instragram </label>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-outline mb-3">
+                    <input type="text" name="Telephone" class="form-control" required />
+                    <label class="form-label" for="amphoe"> Telephone </label>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12">
+                <div class="form-outline mb-3">
+                    <textarea class="form-control" name="Address" rows="4"></textarea>
+                    <label class="form-label">Address</label>
+                </div>
+            </div>
+        </div>
+
+        <br />
 
         <div class="row">
             <div class="col-sm-6">
                 <div class="form-outline mb-3">
-                    <input type="password" id="form1" class="form-control" required/>
-                    <label class="form-label" for="form1">Password</label>
-                </div>    
+                    <input type="password" name="Password" class="form-control" required />
+                    <label class="form-label">Password</label>
+                </div>
             </div>
             <div class="col-sm-6">
                 <div class="form-outline mb-3">
-                    <input type="password" id="form1" class="form-control" required/>
-                    <label class="form-label" for="form1">Password Confirm</label>
-                </div>    
+                    <input type="password" class="form-control" required />
+                    <label class="form-label">Password Confirm</label>
+                </div>
             </div>
         </div>
         <div class="form-check mb-3">
-            <input type="checkbox" class="form-check-input" id="validationFormCheck1" required />
+            <input type="checkbox" class="form-check-input" id="condition" required />
             <label class="form-check-label" for="validationFormCheck1"> I agree to term & conditions </label>
             <div class="invalid-feedback"> I agree to term & conditions </div>
-        </div>                 
-        <hr/>
-        <div class="d-flex align-items-center justify-content-end"> 
-            <button type="submit" class="btn btn-primary me-3"> SIGN UP </button>
+        </div>
+        <hr />
+        <div class="d-flex align-items-center justify-content-end">
+            <button id="register_btn" type="button" class="btn btn-primary me-3"> SIGN UP </button>
             <a href="#" class="btn btn-outline-info" data-mdb-toggle="modal" data-mdb-target="#loginModal"> SIGN IN</a>
         </div>
     </form>
 
     <br>
 </main>
-
