--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -36,23 +39,39 @@
                     </div>
                 </div>
                 <div class="navbar-collapse collapse d-lg-flex justify-content-end align-items-center">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link text-light mx-2" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                         <li class="nav-item">
-                            <a class="nav-link text-light mx-2" asp-area="" asp-controller="Admin" asp-action="Index">Admin</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light mx-2" asp-area="" asp-controller="Account" asp-action="Profile">Profile</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-primary mx-2 btn-outline-primary rounded-pill px-3" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light mx-2 btn-primary rounded-pill px-4" asp-area="" data-mdb-toggle="modal" data-mdb-target="#loginModal">Login</a>
-                        </li>
-                    </ul>
+                    @if (@HttpContextAccessor.HttpContext.Session.GetString("username") != null) 
+                    {
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link text-light mx-2" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light mx-2" asp-area="" asp-controller="Admin" asp-action="Index">Admin</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light mx-2" asp-area="" asp-controller="Account" asp-action="Profile"> 
+                                    @HttpContextAccessor.HttpContext.Session.GetString("username")
+                                </a>
+                            </li>
+                            <li class="nav-item" id="logout-btn">
+                                <a class="nav-link btn text-primary mx-2 btn-outline-primary rounded-pill px-4"> LOGOUT </a>
+                            </li>
+                        </ul>
+                    } 
+                    else 
+                    {
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link text-light mx-2" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-primary mx-2 btn-outline-primary rounded-pill px-3" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light mx-2 btn-primary rounded-pill px-4" asp-area="" data-mdb-toggle="modal" data-mdb-target="#loginModal">Login</a>
+                            </li>
+                        </ul>
+                    }
                 </div>
             </div>
         </nav>
@@ -84,14 +103,14 @@
             <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body mx-4 my-4">
-            <form class="mx-auto" autocomplete="off"> 
+            <form class="mx-auto" autocomplete="off" id="form_login">
                 <div class="form-outline mb-2">
-                    <input type="email" id="form1" class="form-control" required/>
-                    <label class="form-label" for="form1">Email Address</label>
+                    <input type="text" id="login_username" class="form-control" required/>
+                    <label class="form-label" for="login_username">Username</label>
                 </div>    
                 <div class="form-outline mb-4">
-                    <input type="password" id="form1" class="form-control" required/>
-                    <label class="form-label" for="form1">Password</label>
+                    <input type="password" id="login_password" class="form-control" required/>
+                    <label class="form-label" for="login_password">Password</label>
                 </div>
                 <div class="d-flex flex-column align-items-end"> 
                     <button type="submit" class="btn btn-primary mb-2 w-100 rounded-pill">LOGIN</button>
@@ -113,13 +132,13 @@
             <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body mx-4 my-4">
-            <form class="mx-auto" autocomplete="off"> 
+            <form class="mx-auto" autocomplete="off" id="form_forget_password"> 
                 <div class="form-outline mb-4">
-                    <input type="text" id="form1" class="form-control" />
+                    <input type="text" id="forget_password_email" class="form-control" />
                     <label class="form-label" for="form1">Email Address</label>
                 </div>    
                 <div class="d-flex flex-column align-items-end"> 
-                    <button type="submit" class="btn btn-primary mb-2 w-100 rounded-pill">Reset password</button>
+                    <button type="button" id="forget_password_btn" class="btn btn-primary mb-2 w-100 rounded-pill">Reset password</button>
                     <a href="#" class="btn btn-outline-info w-100 rounded-pill" data-mdb-target="#loginModal" data-mdb-toggle="modal" data-mdb-dismiss="modal"> Back To Login </a>
                 </div>
             </form>            
@@ -173,11 +192,8 @@
     <!-- MDB -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>    
 
-    <!-- JQUERY Thailand -->
-    <!-- <script src="~/jquery-Thailand/jquery.Thailand.js/dependencies/JQL.min.js"></script>
-    <script src="~/jquery-Thailand/jquery.Thailand.js/dependencies/typeahead.bundle.js"></script>
-    <script src="~/jquery-Thailand/jquery.Thailand.js/dist/jquery.Thailand.min.js"></script> -->
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
