--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -22,12 +22,31 @@ main {
   margin-left: 0;
 }
 
+/* ================================================ OVER WRITE ================================================= */
 .row-space {
   margin-bottom: 30px !important;
 }
+.selectpicker ~ small {
+  bottom: -22px;
+  left: 0;
+}
+
+.selectpicker ~ .dropdown-menu.show {
+  transform: translate3d(0, 40px, 0) !important;
+  max-height: 400px !important;
+}
+
+.selectpicker ~ .dropdown-toggle {
+  background:  #fff ;
+  border: 1px solid #bdbdbd;
+  box-shadow: none;
+  color: #262626 !important;
+  font-size: 13px;
+}
 
 .invalid,
-.invalid ~ label {
+.invalid ~ label,
+.selectpicker.invalid ~ .dropdown-toggle {
   color: #f93154 !important;
   background: #fff;
 }
@@ -38,9 +57,11 @@ select.invalid {
 
 .invalid ~ label + .form-notch .form-notch-leading, 
 .invalid ~ label + .form-notch .form-notch-middle, 
-.invalid ~ label + .form-notch .form-notch-trailing {
+.invalid ~ label + .form-notch .form-notch-trailing,
+.selectpicker.invalid ~ .dropdown-toggle {
   border-color: #f93154 !important;
 }
+
 
 .valid {
   background: no-repeat calc(100% - 10px) center url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23198754' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e") !important;
@@ -48,14 +69,16 @@ select.invalid {
 }
 
 .valid,
-.valid ~ label {
+.valid ~ label,
+.selectpicker.valid ~ .dropdown-toggle {
   color: #00b74a !important;
   background: #fff;
 }
 
 .valid ~ label + .form-notch .form-notch-leading, 
 .valid ~ label + .form-notch .form-notch-middle, 
-.valid ~ label + .form-notch .form-notch-trailing {
+.valid ~ label + .form-notch .form-notch-trailing,
+.selectpicker.valid ~ .dropdown-toggle {
   border-color: #00b74a !important;
 }
 
